open-telemetry/collector/k8s/otelcol-backend-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcol-gateway
spec:
  selector:
    matchLabels:
      app: otelcol-gateway
  template:
    metadata:
      labels:
        app: otelcol-gateway
    spec:
      serviceAccountName: otelcol-gateway-sa
      containers:
      - name: otelcol-gateway
        image: otelcol:v1
        command:
        - "/otelcol-contrib"
        - "--config=/conf/otelcol-gateway-config"
        ports:
        - containerPort: 4317 # OTLP gRPC
        - containerPort: 4318 # OTLP HTTP
        volumeMounts:
        - name: otelcol-gateway-config
          mountPath: /conf
      volumes:
        - name: otelcol-gateway-config
          configMap:
            name: otelcol-gateway-config
            items:
              - key: otelcol-gateway-config
                path: otelcol-gateway-config
---
apiVersion: v1
kind: Service
metadata:
  name: otelcol-gateway
spec:
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  selector:
    app: otelcol-gateway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otelcol-gateway
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: otelcol-gateway.node-02
    http:
      paths:
      - backend:
          service:
            name: otelcol-gateway
            port:
              number: 4318
        path: /
        pathType: Prefix
